--- a/po/he.po
+++ b/po/he.po
@@ -5,7 +5,7 @@
 # Translators:
 # dhead666 <myfoolishgames@gmail.com>, 2015
 # GenghisKhan <genghiskhan@gmx.ca>, 2015
-# Omeritzics Games <omeritzicschwartz@gmail.com>, 2021
+# Omer I.S. <omeritzicschwartz@gmail.com>, 2021
 # Yaron Shahrabani <sh.yaron@gmail.com>, 2021
 msgid ""
 msgstr ""
