--- a/po/cs.po
+++ b/po/cs.po
@@ -144,6 +144,26 @@ msgstr "Aktualizace pro %s"
 msgid "%s and all connected devices may not be usable while updating."
 msgstr "%s a k němu připojená zařízení nemusí být v průběhu aktualizace použitelná."
 
+#. TRANSLATORS: %1 refers to some kind of security test, e.g. "Encrypted RAM".
+#. %2 refers to a result value, e.g. "Invalid"
+#, c-format
+msgid "%s appeared: %s"
+msgstr "%s se objevilo: %s"
+
+#. TRANSLATORS: %1 refers to some kind of security test, e.g. "UEFI platform
+#. key".
+#. * %2 and %3 refer to results value, e.g. "Valid" and "Invalid"
+#, c-format
+msgid "%s changed: %s → %s"
+msgstr "%s se změnilo: %s → %s"
+
+#. TRANSLATORS: %1 refers to some kind of security test, e.g. "SPI BIOS
+#. region".
+#. %2 refers to a result value, e.g. "Invalid"
+#, c-format
+msgid "%s disappeared: %s"
+msgstr "%s zmizelo: %s"
+
 #. TRANSLATORS: Title: %s is ME kind, e.g. CSME/TXT
 #, c-format
 msgid "%s manufacturing mode"
@@ -413,7 +433,7 @@ msgstr "Blokuje se firmware:"
 
 #. TRANSLATORS: command description
 msgid "Blocks a specific firmware from being installed"
-msgstr "Zablokuje instalaci konkrétního firmwaru"
+msgstr "Zablokovat instalaci konkrétního firmwaru"
 
 #. TRANSLATORS: firmware version of bootloader
 msgid "Bootloader Version"
@@ -453,7 +473,7 @@ msgstr "Změněno"
 
 #. TRANSLATORS: command description
 msgid "Checks cryptographic hash matches firmware"
-msgstr "Zkontroluje zda se kryptografický otisk shoduje s firmware"
+msgstr "Zkontrolovat zda se kryptografický otisk shoduje s firmware"
 
 #. TRANSLATORS: remote checksum
 msgid "Checksum"
@@ -482,11 +502,11 @@ msgstr "Zvolte svazek:"
 
 #. TRANSLATORS: command description
 msgid "Clears any updates scheduled to be updated offline"
-msgstr "Odstraní vše naplánované pro aktualizaci při příštím spuštění systému"
+msgstr "Odstranit vše naplánované pro aktualizaci při příštím spuštění systému"
 
 #. TRANSLATORS: command description
 msgid "Clears the results from the last update"
-msgstr "Smaže výsledky z poslední aktualizace"
+msgstr "Smazat výsledky z poslední aktualizace"
 
 #. TRANSLATORS: error message
 msgid "Command not found"
@@ -642,7 +662,7 @@ msgstr "Vypnuto ladění fwupdate"
 
 #. TRANSLATORS: command description
 msgid "Disables a given remote"
-msgstr "Zakáže daný vzdálený zdroj"
+msgstr "Zakázat daný vzdálený zdroj"
 
 #. TRANSLATORS: command line option
 msgid "Display version"
@@ -709,7 +729,7 @@ msgstr "Vrátit se ke starší verzi u %s a to z %s na %s?"
 
 #. TRANSLATORS: command description
 msgid "Downgrades the firmware on a device"
-msgstr "Vrátí firmware v zařízení na starší verzi"
+msgstr "Vrátit firmware v zařízení na starší verzi"
 
 #. TRANSLATORS: the first replacement is a display name
 #. * e.g. "ColorHugALS" and the second and third are
@@ -766,7 +786,7 @@ msgstr "Zapnuto ladění fwupdate"
 
 #. TRANSLATORS: command description
 msgid "Enables a given remote"
-msgstr "Povolí zadaný vzdálený zdroj"
+msgstr "Povolit zadaný vzdálený zdroj"
 
 msgid "Enabling this functionality is done at your own risk, which means you have to contact your original equipment manufacturer regarding any problems caused by these updates. Only problems with the update process itself should be filed at $OS_RELEASE:BUG_REPORT_URL$."
 msgstr "Zapnutí této funkce je na vaše vlastní riziko. To znamená, že v případě problémů způsobených aktualizací je třeba, abyste se obrátili přímo na výrobce daného vybavení. Na adresu $OS_RELEASE:BUG_REPORT_URL$ by měly být hlášeny pouze problémy s aktualizačním procesem jako takovým."
@@ -785,7 +805,7 @@ msgstr "Šifrovaná RAM"
 
 #. TRANSLATORS: command description
 msgid "Erase all firmware update history"
-msgstr "Smaže veškerou historii aktualizací firmware"
+msgstr "Smazat veškerou historii aktualizací firmware"
 
 #. TRANSLATORS: erasing contents of the flash chips
 msgid "Erasing…"
@@ -1028,10 +1048,10 @@ msgstr "Při aktualizaci mohou být zneplatněna tajemství pro celodiskové ši
 #. TRANSLATORS: global ID common to all similar hardware
 msgid "GUID"
 msgid_plural "GUIDs"
-msgstr[0] "Globálně neopakující se identifikátor"
-msgstr[1] "Globálně neopakující se identifikátory"
-msgstr[2] "Globálně neopakujících se identifikátorů"
-msgstr[3] "Globálně neopakující se identifikátory"
+msgstr[0] "GUID"
+msgstr[1] "GUID identifikátory"
+msgstr[2] "GUID identifikátorů"
+msgstr[3] "GUID identifikátory"
 
 #. TRANSLATORS: command argument: uppercase, spaces->dashes
 msgctxt "A single GUID"
@@ -1052,35 +1072,35 @@ msgstr "Vypsat všechny povolené zásuvné moduly registrované v systému"
 
 #. TRANSLATORS: command description
 msgid "Gets details about a firmware file"
-msgstr "Zjistí podrobnosti o souboru s firmwarem"
+msgstr "Zjistit podrobnosti o souboru s firmwarem"
 
 #. TRANSLATORS: command description
 msgid "Gets the configured remotes"
-msgstr "Zjistí nastavené vzdálené zdroje"
+msgstr "Zjistit nastavené vzdálené zdroje"
 
 #. TRANSLATORS: command description
 msgid "Gets the host security attributes"
-msgstr "Zjistí atributy zabezpečení hostitele"
+msgstr "Zjistit atributy zabezpečení hostitele"
 
 #. TRANSLATORS: firmware approved by the admin
 msgid "Gets the list of approved firmware"
-msgstr "Získá seznam schválených firmwarů"
+msgstr "Získat seznam schválených firmwarů"
 
 #. TRANSLATORS: command description
 msgid "Gets the list of blocked firmware"
-msgstr "Získá seznam blokovaných firmwarů"
+msgstr "Získat seznam blokovaných firmwarů"
 
 #. TRANSLATORS: command description
 msgid "Gets the list of updates for connected hardware"
-msgstr "Vypíše seznam aktualizací pro připojený hardware"
+msgstr "Vypsat seznam aktualizací pro připojený hardware"
 
 #. TRANSLATORS: command description
 msgid "Gets the releases for a device"
-msgstr "Vypíše vydání pro zařízení"
+msgstr "Vypsat vydání pro zařízení"
 
 #. TRANSLATORS: command description
 msgid "Gets the results from the last update"
-msgstr "Vypíše výsledky z poslední aktualizace"
+msgstr "Vypsat výsledky z poslední aktualizace"
 
 #. TRANSLATORS: command argument: uppercase, spaces->dashes
 msgid "HWIDS-FILE"
@@ -1313,7 +1333,7 @@ msgstr "Vypsat typy firmwaru, které jsou k dispozici"
 
 #. TRANSLATORS: command description
 msgid "Lists files on the ESP"
-msgstr "Vypíše soubory na ESP oddílu"
+msgstr "Vypsat soubory na ESP oddílu"
 
 #. TRANSLATORS: parsing the firmware information
 msgid "Loading…"
@@ -1372,11 +1392,11 @@ msgstr "Nesoulad verzí procesu služby a klienta, namísto toho použijte %s"
 
 #. TRANSLATORS: sets something in daemon.conf
 msgid "Modifies a daemon configuration value"
-msgstr "Změní hodnotu v nastavení procesu služby"
+msgstr "Změnit hodnotu v nastavení procesu služby"
 
 #. TRANSLATORS: command description
 msgid "Modifies a given remote"
-msgstr "ZměnÍ zadaný vzdálený zdroj"
+msgstr "Změnit zadaný vzdálený zdroj"
 
 msgid "Modify a configured remote"
 msgstr "Upravit nastavený vzdálený zdroj"
@@ -1390,7 +1410,7 @@ msgstr "Sledovat události v procesu služby"
 
 #. TRANSLATORS: command description
 msgid "Mounts the ESP"
-msgstr "Připojí ESP oddíl"
+msgstr "Připojit ESP oddíl"
 
 #. TRANSLATORS: Requires a reboot to apply firmware or to reload hardware
 msgid "Needs a reboot after installation"
@@ -1609,7 +1629,7 @@ msgstr "Přeinstalovat %s na %s?"
 
 #. TRANSLATORS: command description
 msgid "Reinstall current firmware on the device"
-msgstr "Přeinstaluje stávající firmware na zařízení"
+msgstr "Přeinstalovat stávající firmware na zařízení"
 
 #. TRANSLATORS: command description
 msgid "Reinstall firmware on a device"
@@ -2106,7 +2126,7 @@ msgstr "Odblokovává se firmware:"
 
 #. TRANSLATORS: command description
 msgid "Unblocks a specific firmware from being installed"
-msgstr "Odblokuje instalaci konkrétního firmwaru"
+msgstr "Odblokovat instalaci konkrétního firmwaru"
 
 #. TRANSLATORS: Suffix: the HSI result
 msgid "Unencrypted"
@@ -2131,11 +2151,11 @@ msgstr "Odemčeno"
 
 #. TRANSLATORS: command description
 msgid "Unlocks the device for firmware access"
-msgstr "Odemkne zařízení pro přístup k firmwaru"
+msgstr "Odemknout zařízení pro přístup k firmwaru"
 
 #. TRANSLATORS: command description
 msgid "Unmounts the ESP"
-msgstr "Odpojí ESP oddíl"
+msgstr "Odpojit ESP oddíl"
 
 #. TRANSLATORS: command line option
 msgid "Unset the debugging flag during update"
@@ -2196,7 +2216,7 @@ msgstr "Aktualizovat uložená metadata stávajícím obsahem"
 
 #. TRANSLATORS: command description
 msgid "Updates all firmware to latest versions available"
-msgstr "Aktualizuje veškeré firmwary na nejnovější dostupné verze"
+msgstr "Aktualizovat veškeré firmwary na nejnovější dostupné verze"
 
 msgid "Updating"
 msgstr "Aktualizuje se"
